# crm-agent

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
agent/: api.py  config.py  graph.py  main.py  requirements.txt
agent/nodes/: __init__.py  final_answer.py  supervisor.py
docker/: agent.Dockerfile  mcp_server.Dockerfile  webapp.Dockerfile
mcp_server/: requirements.txt  server.py
scripts/: aggregate_metrics.py  fill_topics.py  llm_as_judge.py  run_agent.py
src/agent/: README.md  api.py  config.py  graph.py  llm_utils.py  main.py
src/agent/nodes/: __init__.py  final_answer.py  item_selector.py  mcp.py  plan_executer.py  planner.py  question_router.py  supervisor.py
src/mcp_server/: README.md  server.py
src/webapp/: README.md  app.py
webapp/: README.md  app.py  requirements.txt
