# pyproject.toml
[project]
name = "ml-eng-technical-test"
version = "0.1.0"
description = "ML Engineer technical test"
requires-python = ">=3.13"

[project.optional-dependencies]

# Agent / orchestration logic
agent = [
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "langchain-mcp-adapters>=0.0.3",
  "mcp>=1.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

# MCP server
mcp_server = [
  "python-dotenv>=1.0.0",
  "mcp[cli]>=1.0.0",
  "starlette>=0.41.0",
  "uvicorn[standard]>=0.32.0",
]

# Frontend / UI
webapp = [
  "streamlit>=1.40.0",
  "requests>=2.32.0",
]


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "E501",
    "S101",
    "F403",
    "D107",
    "D100",
    "D104",
    "D105", # Missing docstring for module, __init__, package
    "DOC201",
    "DOC501",
    "DOC402",
]
select = ["B", "D", "DOC", "E", "F", "I", "N", "PGH", "UP", "S", "T20", "TID", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "DOC", "S106"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.mypy]
python_version = 3.13
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
warn_unreachable = true
files = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --tb=short --cov=agent --cov=mcp_server --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/agent", "src/mcp_server"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
